Hero block done

--- a/index.html
+++ b/index.html
@@ -25,6 +25,60 @@
                 <button>Buy now</button>
             </div>
         </header>
+        <div class="hero-title">
+            <div>
+                <h1>Life is better <br> in running <br> <span>shoes</span>.</h1>
+                <p class="hero-subtitle">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Egestas leo ultrices </p>
+            </div>
+            <div class="hero-image">
+                <img src="/img/img/shpuma.png" alt="puma">
+            </div>
+            <div class="hero-icon">
+                <button><img src="/img/icon/left.png" alt="left"></button>
+            </div>
+        </div>
+        <div class="hero-select content">
+            <div class="select-items">
+                <div class="hero-select__item">
+                    <h2>Brand</h2>
+                    <select name="Brand" id="item">
+                        <option value="Brand">Puma</option>
+                    </select>
+                </div>
+                <hr>
+                <div class="hero-select__item">
+                    <h2>Person</h2>
+                    <select name="Person" id="item">
+                        <option value="Person">man</option>
+                        <option value="Person">woman</option>
+                        <option value="Person">kids</option>
+                    </select>
+                </div> 
+                <hr>
+                <div class="hero-select__item">
+                    <h2>Size</h2>
+                    <select name="Size" id="item">
+                        <option value="Size">large</option>
+                        <option value="Size">small</option>
+                        <option value="Size">medium</option>
+                    </select>
+                </div>  
+                <hr>
+                <div class="hero-select__item">
+                    <h2>Price</h2>
+                    <select name="Price" id="item">
+                        <option value="Price">150$</option>
+                        <option value="Price">250$</option>
+                        <option value="Price">450$</option>
+                        <option value="Price">1000$</option>
+                    </select>
+                </div>  
+                <div class="hero-select__item">
+                    <button>Buy now</button>
+                </div>
+            </div> 
+        </div>
+       
     </div>
         
     </div>
